@@ -1,0 +1,29 @@
+#!/bin/sh
+
+set -eu
+
+gendir="$1"
+wantdir="$1/postgresql.target.wants"
+pgservice="/lib/systemd/system/postgresql@.service"
+
+mkdir -p "$wantdir"
+
+for conf in /etc/postgresql/*/*/postgresql.conf; do
+	test -e "$conf" || continue
+	dir="${conf%/*}"
+
+	# evaluate start.conf
+	if [ -e "$dir/start.conf" ]; then
+		start=$(sed 's/#.*$//; /^[[:space:]]*$/d; s/^\s*//; s/\s*$//' "$dir/start.conf")
+	else
+		start=auto
+	fi
+	[ "$start" = "auto" ] || continue
+
+	verdir="${dir%/*}"
+	version="${verdir##*/}"
+	cluster="${dir##*/}"
+	ln -s "$pgservice" "$wantdir/postgresql@$version-$cluster.service"
+done
+
+exit 0
